src/kubernetes/local/step-1/200-svc-thermometer.yml
##############################################################################
---

apiVersion: v1
kind: Service
metadata:
  name: thermometer
  namespace: com-gft-deuba-unity-gitops-1
  labels:
    PROJECT: com.gft.deuba.unity.gitops-1
    app: thermometer
spec:
  selector:
    PROJECT: com.gft.deuba.unity.gitops-1
    app: thermometer
    version: 1.0.0
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      appProtocol: http
      name: http-endpoint
