src/kubernetes/local/step-1/400-svc-gitea.yml
##############################################################################
---

apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: com-gft-deuba-unity-gitops-1
  labels:
    PROJECT: com.gft.deuba.unity.gitops-1
    app: gitea

spec:

  selector:
    PROJECT: com.gft.deuba.unity.gitops-1
    app: gitea
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30000
      appProtocol: http
      name: http-endpoint
